Fixed backend issues

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-fastapi>=0.111
-uvicorn[standard]>=0.30
-pandas>=2.2
-numpy>=1.26
-scikit-learn>=1.1      # works; if >=1.2 you get sparse_output in OHE
-joblib>=1.3
-python-multipart>=0.0.9
+fastapi
+uvicorn[standard]
+pydantic
+joblib
+numpy
+pandas
+python-dotenv
+scikit-learn==1.7.2
